bzr-svn 0.4.11	UNRELEASED

  BUG FIXES

   * Fix compatibility with Bazaar 1.6.

   * Fix case insensitive handling of paths in 
     CachingLogWalker.find_latest_change(). (#233964)

   * Fix compatibility with newer versions of Subversion. (#229419)

   * Deal with parent branch changing name in Repository.iter_changes().
     (#229410)

   * Fix ability to use bzr-svn with disabling cache.

   * Fix use of unicode characters in filenames in working trees.

   * Fix use of unicode characters in filenames when committing. (#230090)

   * Fix modifying branching scheme from the command-line. (#230529)

   * Cope with kind changes better. (#191576)

   * Fix dealing with strange remove during replace operation. (#232196)

bzr-svn 0.4.10  2008-05-12

  CHANGES

   * Changed license from GPLv2 or later to GPLv3 or later.

  FEATURES

   * Add new ``log-strip-trailing-newline'' option which removes 
     the last trailing newline from the log message when pushing 
     to Subversion. This feature is only available for the 
     experimental mappings. (#189227)

   * Allow more granularity over what properties are overridden using 
     ``override-svn-revprops''. (#159143)

   * Add new ``append-revisions-only'' option with similar behaviour 
     as in standard bzr formats. (#206242)

   * Parse mergeWithUpstream set by svn-buildpackage.

   * Cache last revision number during read locks, significantly speeds
     up push.

   * Use different cache for experimental versions of bzr-svn.

   * Support set_user_option() on Subversion branch BranchConfig. (#195962)

   * Support credentials in URLs. (#181534)

   * Allow usage without on-disk cache. This option is still 
     experimental. (#131008)

  PERFORMANCE

   * No longer calculate inventory sha1's for svn revisions. Should provide 
     some minor speed improvements.

   * Don't check full branch history when looking up the revno of a revision 
     id.
